--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_SERVICE_ID="service_7geshui"
-NEXT_PUBLIC_TEMPLATE_ID="template_juosny7"
-NEXT_PUBLIC_PUBLIC_KEY="Lft_0do1dTCb60kHx"
+NEXT_PUBLIC_SERVICE_ID=""#Enter Emailjs service id
+NEXT_PUBLIC_TEMPLATE_ID=""#Enter Emailjs template id
+NEXT_PUBLIC_PUBLIC_KEY=""#Enter Emailjs public key
 
